manifests/openebs/operator.yaml
# This manifest deploys the OpenEBS control plane components, with associated CRs & RBAC rules
# NOTE: On GKE, deploy the openebs-operator.yaml in admin context

# # Create the OpenEBS namespace
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: openebs
---
# # This is the install related config. It specifies the version of openebs
# # components i.e. custom operators that gets installed. This config is
# # used by maya-apiserver.
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: maya-install-config
#   namespace: openebs
# data:
#   install: |
#     spec:
#       install:
#       - version: "0.7.0"
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: maya-apiserver
  namespace: openebs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: maya-apiserver
    spec:
      serviceAccountName: openebs-maya-operator
      containers:
      - name: maya-apiserver
        imagePullPolicy: IfNotPresent
        image: openebs/m-apiserver:0.7.0
        ports:
        - containerPort: 5656
---
apiVersion: v1
kind: Service
metadata:
  name: maya-apiserver-service
  namespace: openebs
spec:
  ports:
  - name: api
    port: 5656
    protocol: TCP
    targetPort: 5656
  selector:
    name: maya-apiserver
  sessionAffinity: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: openebs-provisioner
  namespace: openebs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: openebs-provisioner
    spec:
      serviceAccountName: openebs-maya-operator
      containers:
      - name: openebs-provisioner
        imagePullPolicy: IfNotPresent
        image: openebs/openebs-k8s-provisioner:0.7.0
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: openebs-snapshot-operator
  namespace: openebs
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: openebs-snapshot-operator
    spec:
      serviceAccountName: openebs-maya-operator
      containers:
        - name: snapshot-controller
          image: openebs/snapshot-controller:0.7.1
          imagePullPolicy: IfNotPresent
        - name: snapshot-provisioner
          image: openebs/snapshot-provisioner:0.7.1
          imagePullPolicy: IfNotPresent
---
# # This is the node-disk-manager related config.
# # It can be used to customize the disks probes and filters
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: openebs-ndm-config
#   namespace: openebs
# data:
#   # udev-probe is default or primary probe which should be enabled to run ndm
#   # filterconfigs contails configs of filters - in ther form fo include
#   # and exclude comma separated strings
#   node-disk-manager.config: |
#     {
#       "probeconfigs": [
#         {
#           "key": "udev-probe",
#           "name": "udev probe",
#           "state": "true"
#         },
#         {
#           "key": "smart-probe",
#           "name": "smart probe",
#           "state": "true"
#         }
#       ],
#       "filterconfigs": [
#         {
#           "key": "os-disk-exclude-filter",
#           "name": "os disk exclude filter",
#           "state": "true"
#         },
#         {
#           "key": "vendor-filter",
#           "name": "vendor filter",
#           "state": "true",
#           "include":"",
#           "exclude":"CLOUDBYT,OpenEBS"
#         },
#         {
#           "key": "path-filter",
#           "name": "path filter",
#           "state": "true",
#           "include":"",
#           "exclude":"loop,/dev/fd0,/dev/sr0,/dev/ram,/dev/dm-"
#         }
#       ]
#     }
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: openebs-ndm
  namespace: openebs
spec:
  template:
    metadata:
      labels:
        name: openebs-ndm
    spec:
      # By default the node-disk-manager will be run on all kubernetes nodes
      # If you would like to limit this to only some nodes, say the nodes
      # that have storage attached, you could label those node and use
      # nodeSelector.
      #
      # e.g. label the storage nodes with - "openebs.io/nodegroup"="storage-node"
      # kubectl label node <node-name> "openebs.io/nodegroup"="storage-node"
      #nodeSelector:
      #  "openebs.io/nodegroup": "storage-node"
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      # - effect: NoExecute
      #   key: node.kubernetes.io/not-ready
      #   operator: Exists
      #   tolerationSeconds: 300
      # - effect: NoExecute
      #   key: node.kubernetes.io/unreachable
      #   operator: Exists
      #   tolerationSeconds: 300
      serviceAccountName: openebs-maya-operator
      hostNetwork: true
      containers:
      - name: node-disk-manager
        command:
        - /usr/sbin/ndm
        - start
        image: openebs/node-disk-manager-amd64:v0.2.0
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        volumeMounts:
        - name: config
          mountPath: /host/node-disk-manager.config
          subPath: node-disk-manager.config
          readOnly: true
        - name: udev
          mountPath: /run/udev
        - name: procmount
          mountPath: /host/mounts
        - name: sparsepath
          mountPath: /var/openebs/sparse
      volumes:
      - name: config
        configMap:
          name: openebs-ndm-config
      - name: udev
        hostPath:
          path: /run/udev
          type: Directory
      # mount /proc/1/mounts (mount file of process 1 of host) inside container
      # to read which partition is mounted on / path
      - name: procmount
        hostPath:
          path: /proc/1/mounts
      - name: sparsepath
        hostPath:
          path: /var/openebs/sparse
---
