manifests/openebs/kustomized.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: openebs
  name: openebs
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: admission-webhook
    app.kubernetes.io/part-of: openebs
    openebs.io/component-name: admission-server
  name: validation-webhook-cfg
  namespace: openebs
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURpekNDQW5PZ0F3SUJBZ0lKQUk5NG9wdWdKb1drTUEwR0NTcUdTSWIzRFFFQkN3VUFNRnd4Q3pBSkJnTlYKQkFZVEFuaDRNUW93Q0FZRFZRUUlEQUY0TVFvd0NBWURWUVFIREFGNE1Rb3dDQVlEVlFRS0RBRjRNUW93Q0FZRApWUVFMREFGNE1Rc3dDUVlEVlFRRERBSmpZVEVRTUE0R0NTcUdTSWIzRFFFSkFSWUJlREFlRncweE9UQXpNREl3Ck56TXlOREZhRncweU1EQXpNREV3TnpNeU5ERmFNRnd4Q3pBSkJnTlZCQVlUQW5oNE1Rb3dDQVlEVlFRSURBRjQKTVFvd0NBWURWUVFIREFGNE1Rb3dDQVlEVlFRS0RBRjRNUW93Q0FZRFZRUUxEQUY0TVFzd0NRWURWUVFEREFKagpZVEVRTUE0R0NTcU [...]
    service:
      name: admission-server-svc
      namespace: openebs
      path: /validate
  name: admission-webhook.openebs.io
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - CREATE
    - DELETE
    resources:
    - persistentvolumeclaims
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admission-webhook
    app.kubernetes.io/part-of: openebs
    openebs.io/component: admission-server
  name: admission-server-svc
  namespace: openebs
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: admission-webhook
    app.kubernetes.io/part-of: openebs
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: openebs
  name: maya-apiserver-service
  namespace: openebs
spec:
  ports:
  - name: api
    port: 5656
    protocol: TCP
    targetPort: 5656
  selector:
    app.kubernetes.io/part-of: openebs
    name: maya-apiserver
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admission-webhook
    app.kubernetes.io/part-of: openebs
    openebs.io/component-name: admission-server
    openebs.io/version: 1.0.0
  name: openebs-admission-server
  namespace: openebs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-webhook
      app.kubernetes.io/part-of: openebs
  template:
    metadata:
      labels:
        app: admission-webhook
        app.kubernetes.io/part-of: openebs
        openebs.io/component-name: admission-server
        openebs.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -tlsCertFile=/etc/webhook/certs/cert.pem
        - -tlsKeyFile=/etc/webhook/certs/key.pem
        - -alsologtostderr
        - -v=2
        - 2>&1
        image: quay.io/openebs/admission-server:1.0.0
        imagePullPolicy: IfNotPresent
        name: admission-webhook
        volumeMounts:
        - mountPath: /etc/webhook/certs
          name: webhook-certs
          readOnly: true
      serviceAccountName: openebs-maya-operator
      volumes:
      - name: webhook-certs
        secret:
          secretName: admission-server-certs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: openebs
    name: openebs-ndm-operator
    openebs.io/component-name: ndm-operator
    openebs.io/version: 1.0.0
  name: openebs-ndm-operator
  namespace: openebs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: openebs
      name: openebs-ndm-operator
      openebs.io/component-name: ndm-operator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: openebs
        name: openebs-ndm-operator
        openebs.io/component-name: ndm-operator
        openebs.io/version: 1.0.0
    spec:
      containers:
      - env:
        - name: WATCH_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: OPERATOR_NAME
          value: node-disk-operator
        - name: CLEANUP_JOB_IMAGE
          value: quay.io/openebs/linux-utils:3.9
        image: quay.io/openebs/node-disk-operator-amd64:v0.4.0
        imagePullPolicy: Always
        name: node-disk-operator
        readinessProbe:
          exec:
            command:
            - stat
            - /tmp/operator-sdk-ready
          failureThreshold: 1
          initialDelaySeconds: 4
          periodSeconds: 10
      serviceAccountName: openebs-maya-operator
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: openebs
    name: maya-apiserver
    openebs.io/component-name: maya-apiserver
    openebs.io/version: 1.0.0
  name: maya-apiserver
  namespace: openebs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: openebs
      name: maya-apiserver
      openebs.io/component-name: maya-apiserver
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: openebs
        name: maya-apiserver
        openebs.io/component-name: maya-apiserver
        openebs.io/version: 1.0.0
    spec:
      containers:
      - env:
        - name: OPENEBS_IO_INSTALL_DEFAULT_CSTOR_SPARSE_POOL
          value: "false"
        - name: OPENEBS_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: OPENEBS_SERVICE_ACCOUNT
          valueFrom:
            fieldRef:
              fieldPath: spec.serviceAccountName
        - name: OPENEBS_MAYA_POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: OPENEBS_IO_JIVA_CONTROLLER_IMAGE
          value: quay.io/openebs/jiva:1.0.0
        - name: OPENEBS_IO_JIVA_REPLICA_IMAGE
          value: quay.io/openebs/jiva:1.0.0
        - name: OPENEBS_IO_JIVA_REPLICA_COUNT
          value: "3"
        - name: OPENEBS_IO_CSTOR_TARGET_IMAGE
          value: quay.io/openebs/cstor-istgt:1.0.0
        - name: OPENEBS_IO_CSTOR_POOL_IMAGE
          value: quay.io/openebs/cstor-pool:1.0.0
        - name: OPENEBS_IO_CSTOR_POOL_MGMT_IMAGE
          value: quay.io/openebs/cstor-pool-mgmt:1.0.0
        - name: OPENEBS_IO_CSTOR_VOLUME_MGMT_IMAGE
          value: quay.io/openebs/cstor-volume-mgmt:1.0.0
        - name: OPENEBS_IO_VOLUME_MONITOR_IMAGE
          value: quay.io/openebs/m-exporter:1.0.0
        - name: OPENEBS_IO_CSTOR_POOL_EXPORTER_IMAGE
          value: quay.io/openebs/m-exporter:1.0.0
        - name: OPENEBS_IO_ENABLE_ANALYTICS
          value: "true"
        - name: OPENEBS_IO_INSTALLER_TYPE
          value: openebs-operator
        image: quay.io/openebs/m-apiserver:1.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /usr/local/bin/mayactl
            - version
          initialDelaySeconds: 30
          periodSeconds: 60
        name: maya-apiserver
        ports:
        - containerPort: 5656
        readinessProbe:
          exec:
            command:
            - /usr/local/bin/mayactl
            - version
          initialDelaySeconds: 30
          periodSeconds: 60
      serviceAccountName: openebs-maya-operator
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: openebs
    name: openebs-localpv-provisioner
    openebs.io/component-name: openebs-localpv-provisioner
    openebs.io/version: 1.0.0
  name: openebs-localpv-provisioner
  namespace: openebs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: openebs
      name: openebs-localpv-provisioner
      openebs.io/component-name: openebs-localpv-provisioner
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: openebs
        name: openebs-localpv-provisioner
        openebs.io/component-name: openebs-localpv-provisioner
        openebs.io/version: 1.0.0
    spec:
      containers:
      - env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: OPENEBS_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: OPENEBS_IO_ENABLE_ANALYTICS
          value: "true"
        - name: OPENEBS_IO_HELPER_IMAGE
          value: quay.io/openebs/openebs-tools:3.8
        - name: OPENEBS_IO_INSTALLER_TYPE
          value: openebs-operator
        image: quay.io/openebs/provisioner-localpv:1.0.0
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - pgrep
            - .*localpv
          initialDelaySeconds: 30
          periodSeconds: 60
        name: openebs-provisioner-hostpath
      serviceAccountName: openebs-maya-operator
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: openebs
    name: openebs-provisioner
    openebs.io/component-name: openebs-provisioner
    openebs.io/version: 1.0.0
  name: openebs-provisioner
  namespace: openebs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: openebs
      name: openebs-provisioner
      openebs.io/component-name: openebs-provisioner
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: openebs
        name: openebs-provisioner
        openebs.io/component-name: openebs-provisioner
        openebs.io/version: 1.0.0
    spec:
      containers:
      - env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: OPENEBS_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/openebs/openebs-k8s-provisioner:1.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - pgrep
            - .*openebs
          initialDelaySeconds: 30
          periodSeconds: 60
        name: openebs-provisioner
      serviceAccountName: openebs-maya-operator
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: openebs
    name: openebs-snapshot-operator
    openebs.io/component-name: openebs-snapshot-operator
    openebs.io/version: 1.0.0
  name: openebs-snapshot-operator
  namespace: openebs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: openebs
      name: openebs-snapshot-operator
      openebs.io/component-name: openebs-snapshot-operator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: openebs
        name: openebs-snapshot-operator
        openebs.io/component-name: openebs-snapshot-operator
        openebs.io/version: 1.0.0
    spec:
      containers:
      - env:
        - name: OPENEBS_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/openebs/snapshot-controller:1.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - pgrep
            - .*controller
          initialDelaySeconds: 30
          periodSeconds: 60
        name: snapshot-controller
      - env:
        - name: OPENEBS_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/openebs/snapshot-provisioner:1.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - pgrep
            - .*provisioner
          initialDelaySeconds: 30
          periodSeconds: 60
        name: snapshot-provisioner
      serviceAccountName: openebs-maya-operator
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/part-of: openebs
    name: openebs-ndm
    openebs.io/component-name: ndm
    openebs.io/version: 1.0.0
  name: openebs-ndm
  namespace: openebs
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: openebs
      name: openebs-ndm
      openebs.io/component-name: ndm
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: openebs
        name: openebs-ndm
        openebs.io/component-name: ndm
        openebs.io/version: 1.0.0
    spec:
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: SPARSE_FILE_DIR
        - name: SPARSE_FILE_SIZE
          value: "10737418240"
        - name: SPARSE_FILE_COUNT
          value: "1"
        image: quay.io/openebs/node-disk-manager-amd64:v0.4.0
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - pgrep
            - .*ndm
          initialDelaySeconds: 30
          periodSeconds: 60
        name: node-disk-manager
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /host/node-disk-manager.config
          name: config
          readOnly: true
          subPath: node-disk-manager.config
        - mountPath: /run/udev
          name: udev
        - mountPath: /host/proc
          name: procmount
          readOnly: true
        - mountPath: /var/openebs/sparse
          name: sparsepath
      hostNetwork: true
      serviceAccountName: openebs-maya-operator
      volumes:
      - configMap:
          name: openebs-ndm-config
        name: config
      - hostPath:
          path: /run/udev
          type: Directory
        name: udev
      - hostPath:
          path: /proc
          type: Directory
        name: procmount
      - hostPath:
          path: /var/openebs/sparse
        name: sparsepath
  updateStrategy:
    type: RollingUpdate
